--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -6,7 +6,8 @@ jobs:
   build-linux:
     runs-on: ubuntu-latest
     strategy:
-      max-parallel: 5
+      matrix:
+        python-version: [3.6, 3.7, 3.8, 3.9,3.10]
 
     steps:
     - uses: actions/checkout@v4
